--- a/CyberAction/Cells/MonthCell/MonthCell.xib
+++ b/CyberAction/Cells/MonthCell/MonthCell.xib
@@ -80,43 +80,35 @@
                         </constraints>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="YTF-qj-4rq">
-                        <rect key="frame" x="0.0" y="74.5" width="86.5" height="381.5"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="0.0" y="79.5" width="86.5" height="376.5"/>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="0fJ-vq-y4W">
-                        <rect key="frame" x="88.5" y="74.5" width="86.5" height="381.5"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="88.5" y="79.5" width="86.5" height="376.5"/>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="RyV-Je-po8">
-                        <rect key="frame" x="177" y="74.5" width="86.5" height="381.5"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="177" y="79.5" width="86.5" height="376.5"/>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="8im-2t-jnz">
-                        <rect key="frame" x="265.5" y="74.5" width="87" height="381.5"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="265.5" y="79.5" width="87" height="376.5"/>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="wT8-Ji-82V">
-                        <rect key="frame" x="354.5" y="74.5" width="86.5" height="381.5"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="354.5" y="79.5" width="86.5" height="376.5"/>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="tHi-NP-VLv">
-                        <rect key="frame" x="443" y="74.5" width="86.5" height="381.5"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="443" y="79.5" width="86.5" height="376.5"/>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="7I8-1J-8Ga">
-                        <rect key="frame" x="531.5" y="74.5" width="86.5" height="381.5"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <rect key="frame" x="531.5" y="79.5" width="86.5" height="376.5"/>
                     </stackView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <color key="backgroundColor" red="0.83509181700000001" green="0.83509181700000001" blue="0.83509181700000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="7I8-1J-8Ga" firstAttribute="width" secondItem="cIq-x3-WPI" secondAttribute="width" id="19a-68-LrJ"/>
                 <constraint firstItem="7I8-1J-8Ga" firstAttribute="centerX" secondItem="cIq-x3-WPI" secondAttribute="centerX" id="3p1-OO-qdq"/>
                 <constraint firstAttribute="bottom" secondItem="0fJ-vq-y4W" secondAttribute="bottom" constant="10" id="4Kg-Oi-c5n"/>
                 <constraint firstItem="tHi-NP-VLv" firstAttribute="width" secondItem="Csc-20-XWZ" secondAttribute="width" id="4O9-cC-tJy"/>
-                <constraint firstItem="0fJ-vq-y4W" firstAttribute="top" secondItem="Wzm-xK-Vu8" secondAttribute="bottom" constant="10" id="4nW-4v-1L3"/>
+                <constraint firstItem="0fJ-vq-y4W" firstAttribute="top" secondItem="Wzm-xK-Vu8" secondAttribute="bottom" constant="15" id="4nW-4v-1L3"/>
                 <constraint firstItem="sZO-5L-0GP" firstAttribute="top" secondItem="ofb-dT-DUN" secondAttribute="bottom" constant="10" id="6uo-pS-7ln"/>
                 <constraint firstAttribute="bottom" secondItem="7I8-1J-8Ga" secondAttribute="bottom" constant="10" id="7sX-xR-i8r"/>
                 <constraint firstItem="RyV-Je-po8" firstAttribute="width" secondItem="lUJ-Mg-ijI" secondAttribute="width" id="9tg-eJ-lFe"/>
@@ -126,7 +118,7 @@
                 <constraint firstItem="YTF-qj-4rq" firstAttribute="width" secondItem="8UB-yR-nXz" secondAttribute="width" id="Iem-RD-B0U"/>
                 <constraint firstAttribute="bottom" secondItem="tHi-NP-VLv" secondAttribute="bottom" constant="10" id="Iku-cR-oZk"/>
                 <constraint firstAttribute="bottom" secondItem="YTF-qj-4rq" secondAttribute="bottom" constant="10" id="KzX-4S-lR3"/>
-                <constraint firstItem="tHi-NP-VLv" firstAttribute="top" secondItem="Csc-20-XWZ" secondAttribute="bottom" constant="10" id="NNC-BH-AuP"/>
+                <constraint firstItem="tHi-NP-VLv" firstAttribute="top" secondItem="Csc-20-XWZ" secondAttribute="bottom" constant="15" id="NNC-BH-AuP"/>
                 <constraint firstItem="0fJ-vq-y4W" firstAttribute="centerX" secondItem="Wzm-xK-Vu8" secondAttribute="centerX" id="Ohi-iP-HnT"/>
                 <constraint firstItem="wT8-Ji-82V" firstAttribute="width" secondItem="ao9-yG-dyb" secondAttribute="width" id="Osw-6S-gUl"/>
                 <constraint firstItem="RyV-Je-po8" firstAttribute="centerX" secondItem="lUJ-Mg-ijI" secondAttribute="centerX" id="Pek-kY-6e8"/>
@@ -139,11 +131,11 @@
                 <constraint firstItem="ofb-dT-DUN" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="ax3-f3-jjb"/>
                 <constraint firstAttribute="trailing" secondItem="ofb-dT-DUN" secondAttribute="trailing" id="dvL-0K-74Q"/>
                 <constraint firstItem="ofb-dT-DUN" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="hjQ-7V-dPT"/>
-                <constraint firstItem="wT8-Ji-82V" firstAttribute="top" secondItem="ao9-yG-dyb" secondAttribute="bottom" constant="10" id="iMA-LP-vt3"/>
-                <constraint firstItem="RyV-Je-po8" firstAttribute="top" secondItem="lUJ-Mg-ijI" secondAttribute="bottom" constant="10" id="jSX-tg-RaO"/>
-                <constraint firstItem="8im-2t-jnz" firstAttribute="top" secondItem="gjQ-rl-x0T" secondAttribute="bottom" constant="10" id="nEb-Ub-RBC"/>
-                <constraint firstItem="YTF-qj-4rq" firstAttribute="top" secondItem="8UB-yR-nXz" secondAttribute="bottom" constant="10" id="pcv-sr-qRO"/>
-                <constraint firstItem="7I8-1J-8Ga" firstAttribute="top" secondItem="cIq-x3-WPI" secondAttribute="bottom" constant="10" id="r2o-6H-uaE"/>
+                <constraint firstItem="wT8-Ji-82V" firstAttribute="top" secondItem="ao9-yG-dyb" secondAttribute="bottom" constant="15" id="iMA-LP-vt3"/>
+                <constraint firstItem="RyV-Je-po8" firstAttribute="top" secondItem="lUJ-Mg-ijI" secondAttribute="bottom" constant="15" id="jSX-tg-RaO"/>
+                <constraint firstItem="8im-2t-jnz" firstAttribute="top" secondItem="gjQ-rl-x0T" secondAttribute="bottom" constant="15" id="nEb-Ub-RBC"/>
+                <constraint firstItem="YTF-qj-4rq" firstAttribute="top" secondItem="8UB-yR-nXz" secondAttribute="bottom" constant="15" id="pcv-sr-qRO"/>
+                <constraint firstItem="7I8-1J-8Ga" firstAttribute="top" secondItem="cIq-x3-WPI" secondAttribute="bottom" constant="15" id="r2o-6H-uaE"/>
                 <constraint firstItem="8im-2t-jnz" firstAttribute="centerX" secondItem="gjQ-rl-x0T" secondAttribute="centerX" id="sXT-on-dgS"/>
                 <constraint firstItem="ofb-dT-DUN" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="v9R-yI-lDl"/>
                 <constraint firstItem="YTF-qj-4rq" firstAttribute="centerX" secondItem="8UB-yR-nXz" secondAttribute="centerX" id="xmR-mr-PIY"/>
@@ -157,6 +149,7 @@
                 <outlet property="ThursdayStackView" destination="8im-2t-jnz" id="168-96-2nd"/>
                 <outlet property="TuesdayStackView" destination="0fJ-vq-y4W" id="n5k-BR-0uX"/>
                 <outlet property="WednesdayStackView" destination="RyV-Je-po8" id="7Zc-6d-mI8"/>
+                <outlet property="monthNameLabel" destination="ofb-dT-DUN" id="RmQ-2A-KEn"/>
             </connections>
             <point key="canvasLocation" x="543.47826086956525" y="249.10714285714283"/>
         </collectionViewCell>
